test/bad/functions/void1.px

func f() def
    return

func main() Int def
    x = 3
    x = f()
    return 0
